@@ -268,7 +268,9 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.18.1</version>
                     <configuration>
-                        <argLine>-Ddtype=float</argLine>
+                        <forkCount>0</forkCount>
+                        <reuseForks>true</reuseForks>
+                        <argLine>-Xms2048m -Xmx2048m -XX:MaxPermSize=256m -Ddtype=float -Dorg.nd4j.parallel.threads=1</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
